*SVN*

* Make the awk use in the dependencies code work with POSIX awk [mcornick]

* Make variable accesses thread safe [via Adrian Danieli]

* Make user input for yes/no prompts work correctly in the Mercurial module [Matthew Elder]

* Use single quotes to escape semicolon in find command, instead of a backslash [via michael.italia@gmail.com]

* Better quoting of reserved characters in commands [Jamis Buck]

* Make sure Net::SSH versions prior to 1.1.0 still work [Jamis Buck]

* Allow the :hosts and :roles keys to accept lambdas, which will be evaluated lazily to allow runtime selection of hosts and roles in tasks [Jamis Buck]

* Use `which' to test whether a command exists in the remote path, instead of `test -p' [Jamis Buck]

* Make sure the connection factory is established synchronously, to avoid multiple gateway instances being spawned [Jamis Buck]

* Make sure symlink and finalize_update tasks reference the most recent release when called by themselves [Jamis Buck]


*1.99.2 (2.0 Preview 3)* June 15, 2007
 
* CVS SCM module [Brian Phillips]

* Fix typo in Perforce SCM module [Chris Bailey]

* ssh_options < server options when connecting [Jamis Buck]

* Logger defaults to $stderr instead of STDERR [lhartley]

* Use cp -RPp instead of -a in the remote cache strategy

* Make the UploadError exception include an array of the hosts that failed [rob@inversepath.com]

* Allow "empty" roles to be declared [Jamis Buck]

* Mercurial SCM module [Tobias Luetke, Matthew Elder]

* Invoke all commands via sh (customizable via :default_shell) [Jamis Buck]

* Make sure all directories exist on each deploy which are necessary for subsequent commands to succeed, since some SCM's won't save empty directories [Matthew Elder]

* Add :default_environment variable, which is applied to every command


*1.99.1 (2.0 Preview 2)* May 10, 2007

* Fix some documentation typos [eventualbuddha]

* Don't retry failed connections if an explicit auth_methods list is given [Chris Farms]
